hphp/test/zend/good/ext/sockets/tests/socket_listen_params.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('sockets')) {
    die('skip sockets extension not available.');
}
}
