hphp/test/zend/bad/ext/sockets/tests/bug63000.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('skip sockets extension not available.');
}
if (PHP_OS !== 'Darwin') {
    die('is not OSX.');
}